welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:31: error: not found: value c
        val getCouleurSol()=c
                            ^SlugSnail:31: error: not found: value getCouleurSol
        val getCouleurSol()=c
            ^SlugSnail:32: error: not found: value c
        if (getCouleurSol()!=c){
                             ^